demo-kubernetes-components/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
<<<<<<< HEAD
  name: mongo-express-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
  - host: bhattbrothers.realdevops.in        # ← your domain, no port
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-express-service
            port:
              number: 8081
=======
  name: name
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: app.com
      http:
        paths:
        - path: /
          pathType: Exact
          backend:
            service:
              name: my-service
              port: 
                number: 8080
>>>>>>> master
